[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rdapify-py"
version = "0.1.2"
description = "Unified RDAP client for Python, powered by Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["rdap", "whois", "domain", "ip", "asn", "rust"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage       = "https://rdapify.com"
Repository     = "https://github.com/rdapify/rdapify-rs"
Documentation  = "https://docs.rdapify.com"

[tool.maturin]
module-name = "rdapify_py"
bindings = "pyo3"
# pure Rust extension — no Python source directory needed
features = []
